2005-11-21  Kazuhiko  <kazuhiko@fdiary.net>
	* rast-register.rb: add a plugin file.
	* rast-search.rb, rast.rxml: support opensearch rss.
	* rast.rhtml: revise for more valid HTML output.

2005-05-11  Kazuhiko  <kazuhiko@fdiary.net>
	* rast.rhtml, i.rast.rhtml: use @num instead of 10.

2005-05-11 TADA Tadashi <sho@spc.gr.jp>
	* rast.rhtml, i.rast.rhtml: set title to h2 element, and copy format_links
	plugin on top of results.

2005-05-10 TADA Tadashi <sho@spc.gr.jp>
	* README.ja: fix typo.

2005-04-16  Kazuhiko  <kazuhiko@fdiary.net>
	* rast.rhtml: convert the encoding of @query.

2005-04-15  Kazuhiko  <kazuhiko@fdiary.net>
	* rast-search.rb: never use Rast::LocalDB. fix a bug in running
	from a shell.

2005-04-14  Kazuhiko  <kazuhiko@fdiary.net>
	* initial release of rast-search.